<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.pedidoActivity">
    <item
        android:id="@+id/action_resumen"
        android:orderInCategory="100"
        android:title="@string/action_resumen"
        app:showAsAction="never" />
    <item
        android:visible="false"
        android:id="@+id/action_admin"
        android:orderInCategory="100"
        android:title="@string/action_admin"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_localizacion"
        android:orderInCategory="100"
        android:title="@string/action_localizacion"
        app:showAsAction="never" />
    <item
        android:visible="true"
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/action_logout"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never" />
</menu>
